hphp/test/zend/good/Zend/tests/indirect_call_array_001.php.expectf

Fatal error: Invalid callable (array) in %s/indirect_call_array_001.php on line 4
